reign_derive/tests/ui/compile_fail/model_insertable.stderr
error[E0599]: no method named `id` found for struct `InsertableUser` in the current scope
  --> $DIR/model_insertable.rs:23:17
   |
14 | #[derive(Debug, Model)]
   |                 ----- method `id` not found for this
...
23 |     User::new().id(4).save().await.unwrap();
   |                 ^^ method not found in `InsertableUser<User>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `id`, perhaps you need to implement it:
           candidate #1: `reign::prelude::Identifiable`
